@@ -31,10 +31,11 @@
 
 #define FIRMWARE_VERSION_MAJOR 2
 #define FIRMWARE_VERSION_MINOR 0
-#define FIRMWARE_VERSION_REVISION 2
+#define FIRMWARE_VERSION_REVISION 3
 
 #define MOVING_AVERAGE_MAX_LENGTH 1000
 #define CALLBACK_VALUE_TYPE CALLBACK_VALUE_TYPE_INT32
+#define MOVING_AVERAGE_TYPE MOVING_AVERAGE_TYPE_INT32
 
 #include "config_custom_bootloader.h"
 
