@@ -7,3 +7,6 @@
 
 2022-04-20: 2.0.2 (7701b78):
 - Improve MAX31865/SPI error handling
+
+2025-01-08: 2.0.3 (TBD):
+- Fix integer overflow in moving average at temperatures above 325°C
